babi/babi-api-deploy-consumer-C.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: stg-babi-deploy-consumer-c
    namespace: babi
    labels:
        app: babi-consumer-c
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: babi-consumer-c
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: babi-consumer-c
                tier: frontend
        spec:
            containers:
                - image: gcr.io/mi4u-303100/apibotbabi:0.0.9
                  command: ["python"]
                  args: ["main_con_database.py"]
                  imagePullPolicy: IfNotPresent
                  name: babi-c
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
