babi/babi-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: stg-babi-deployment
    namespace: babi
    labels:
        app: babi
        tier: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: babi
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxSurge: 2
            maxUnavailable: 1
    template:
        metadata:
            labels:
                app: babi
                tier: frontend
        spec:
            containers:
                - image: gcr.io/mi4u-303100/apibotbabi:0.0.9
                  #command: ["sleep 600"]
                  imagePullPolicy: IfNotPresent
                  ports: 
                    - containerPort: 5000
                  name: babi
                  resources: 
                    limits:
                      cpu: 1000
                      memory: 1000Mi
                    requests:
                      cpu: 300m
                      memory: 300Mi
                  terminationMessagePath: /dev/termination-log
                  terminationMessagePolicy: File
            dnsPolicy: ClusterFirst
            restartPolicy: Always
            schedulerName: default-scheduler
            securityContext: {}
            terminationGracePeriodSeconds: 10
