babi/babi-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: babi
    namespace: babi
    labels:
        app: babi
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 5000
    selector:
        app: babi
        tier: frontend
